# Rohtanza-Flappy-Bird-An-OOP-Approach-to-Game-Development

./: README.md
FlappyBirdAnOOPApproachtoGameDevelopment/: AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  DEFINITIONS.hpp  Flash.cpp  Flash.hpp  Game.cpp  Game.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  HUD.cpp  HUD.hpp  InputManager.cpp  InputManager.hpp  Land.cpp  Land.hpp  MainMenuState.cpp  MainMenuState.hpp  Pipe.cpp  Pipe.hpp  SplashState.cpp  SplashState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
